--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
 }
- .card{
+ .card{ 
+    overflow: visible;
     width: 400px;
     height: 500px;
-    background-color: rgb(144, 69, 215);
+    border: 0;
  }
  .card > div{
     position: relative;
@@ -17,14 +20,36 @@ body{
     position: absolute;
     width: 100%;
  }
+ /* .atropos-spacer{
+    height: 200px;
+ } */
+ .tiger{
+    position: absolute;
+    top: 50%;
+    right: -220px;  
+    width: 220px;
+    height: 130px;
+    transform: rotateZ(10deg);
+    transition-timing-function: ease-in-out;
+    transition: 1s !important;
+    
+ }
+ .tig{
+    transform: scale(2);
+    width: 100% ;
+    height: 100%;
+ }
  .images{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: visible;
     width: 100%;
     height: 170px;
-    overflow: hidden;
     box-shadow: 5px 5px 15px rgb(214, 170, 255);
  }
-.atropos {
-    width: 400px;
+.first {
+    margin: 30px;
+    width: 18em;
     height: 400px;
     
   }
@@ -51,13 +76,80 @@ body{
 }
 .btn{
     color: white;
-    background-color: rgb(65, 9, 118);
+    background-color: rgb(122, 74, 168);
     box-shadow: 5px 5px 6px rgba(2, 2, 2, 0.685);
     color: white;
 }
+.btn:hover{
+    color: white;
+    transform: translateZ(+100px) !important;
+}
 .atroposinner{
+    border-radius: 10px !important;
         flex-direction: column;
         display: flex;
         align-items: center;
         justify-content: center;
 }
+/* .first:hover .tiger{
+    top: 20%;
+    right: 35px;
+} */
+
+
+
+.second{
+    margin: 30px;
+    width: 18em;
+    height: 174px;
+}
+.images2{
+    overflow: hidden;
+    position: relative;
+    height: 200px;
+    box-shadow: 5px 5px 15px rgb(214, 170, 255);
+ }
+.original{
+    width: 100%;
+    height: 100%;
+}
+ .images2>img{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+ }
+ 
+
+
+ .images3{
+    position: relative;
+    width: 350px;
+    height: 225px;
+ }
+ .images3>img{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+ }
+ .lefthand{
+    left: -200px;
+    transition: 1s;
+    transition-timing-function: ease-in-out;
+    filter: drop-shadow(5px 10px 10px black);
+    
+}
+.righthand{
+        transition: 2s;
+        transition-timing-function: ease-in-out;
+        left: 200px;
+        filter: drop-shadow(5px 10px 10px black);
+ }
+ .third:hover .lefthand{
+    left: 0px;
+ }
+ .third:hover .righthand{
+    left: 0px;
+ }
